cmake_minimum_required(VERSION 3.26)
project(Graphics)

set(CMAKE_CXX_STANDARD 17)
include_directories(./EasyX/include)
link_directories(./EasyX/lib64)
link_libraries(libeasyx.a)

add_executable(0_firstwindow 0_firstwindow.cpp)
add_executable(week5 week5.cpp)
add_executable(week5-updated week5-updated.cpp)
add_executable(week6 week6.cpp)
add_executable(week10 week10.cpp)
add_executable(week12 week12.cpp)
add_executable(week12-updated week12-updated.cpp)